--- a/scripts/GIS-Test.Rmd
+++ b/scripts/GIS-Test.Rmd
@@ -174,6 +174,9 @@ hotspot_sp_1k_noholes_wgs = spTransform(hotspot_sp_ee_1k_noholes , CRS( "+proj=l
 hotspot2003_1k_wgs84_noholes = st_as_sf(hotspot_sp_1k_noholes_wgs) 
 ```
 
+```{r}
+head(hotspot2003_1k_wgs84_noholes)
+```
 
 ```{r eval=FALSE, include=FALSE}
 st_write(hotspot2003_1k_wgs84_noholes, "../outputs/hotspot2003_1k_wgs84_noholes.shp", driver="ESRI Shapefile")  # create to a shapefile 
@@ -181,35 +184,8 @@ st_write(hotspot2003_1k_wgs84_noholes, "../outputs/hotspot2003_1k_wgs84_noholes.
 ```
 
 
-#########################
-```{r}
-hole = s_ploy
-```
-
-```{r}
-featureNumber=1 ; ringNumber=1
-ring = SpatialPolygons(
-            list(
-              Polygons(
-                 list(
-                   hole@polygons[[featureNumber]]@Polygons[[ringNumber]]
-                  ),
-               ID=1)))
-```
-
-```{r}
-unholed = SpatialPolygonsDataFrame(ring,data=hole@data,match.ID=FALSE)
-```
-
-```{r}
-gArea(hole)
-gArea(unholed)
-```
 
 
-```{r}
-plot(unholed)
-```
 
 ```{r}
 hotspot_sp_ee_subset_buf_wgs = spTransform(hotspot_sp_ee_subset_buf, CRS( "+proj=longlat +ellps=WGS84 +datum=WGS84 +no_defs "))
